--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,11 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    height: 2000px; /* Наприклад, 2000px */
+}
+
 .main {
     width: 100%;
     /*background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(255, 255, 255, 0) 100%));*/
@@ -10,56 +15,160 @@
     height: 109vh;
 }
 
-.navbar{
-    background-color: #222529; /* Темний колір з прозорістю */
-    padding: 10px 20px; /* Параметри відступу */
-    position: fixed; /* Фіксована позиція */
-    top: 0; /* Розташування зверху */
-    left: 0; /* Розташування зліва */
-    width: 100%; /* Ширина весь екран */
-    z-index: 1000; /* Індекс зверху */
-    opacity: 0.9; /* Прозорість */
+.top_parallax {
+    /* Посилання на ваше зображення */
+    background-image: url("img/q.jpg");
+
+    /* Встановлення мінімальних розмірів */
+    min-height: 60%;
+
+    /* Створення ефекту паралаксу */
+    background-attachment: fixed;
+    background-position: 80% center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-bottom-left-radius: 25px;
+    border-bottom-right-radius: 25px;
+    transition: background-position 0.5s ease; /* Плавний перехід */
 }
 
-.icon{
-    width: 200px;
+.content {
+    padding-top: 30px;
+}
+
+.about_text {
     float: left;
-    height: 70px;
+    width: 50%; /* Ширина текстового блоку */
 }
 
-.logo{
-    color: white;
-    font-size: 40px;
-    font-family: Arial, serif;
+.about_photo {
+    float: right;
+    width: 50%; /* Ширина блоку з зображенням */
+    text-align: center; /* Вирівнювання тексту по центру */
+
+}
+
+
+.content h1{
+    font-family: "Franklin Gothic Medium", serif;
+    padding-left: 2px;
+    font-size: 5vw;
+    color: #101926;
+}
+
+.content p{
+    font-family: "Franklin Gothic Medium", serif;
     padding-left: 20px;
-    float: left;
-    padding-top: 10px;
+    font-size: 1.5vw;
+    color: #475467;
+
 }
 
-.menu{
-    width: 400px;
-    float: left;
-    height: 70px;
+
+@media (max-width: 600px) {
+    .top_parallax {
+        /* background-size: 350% auto; */
+        background-size: cover;
+        min-height: 45%;
+        background-attachment: scroll;
+        background-image: url("img/tennis_ball_v2.png");
+    }
+
+    .content h1 {
+        font-size: 20px; /* Новий розмір шрифту для мобільних пристроїв */
+    }
+
+    .content p {
+        font-size: 16px; /* Новий розмір шрифту для мобільних пристроїв */
+    }
+
+    .about_text {
+        float: none;
+        width: 100%; /* Змінити ширину блоку на 100% */
+
+    }
+
+    .about_photo {
+        float: none; /* Зняти зображення зі зміщення */
+        width: 100%; /* Змінити ширину блоку на 100% */
+    }
 }
 
-ul{
-    float: left;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
 
-ul li{
-    list-style: none;
-    margin-left: 62px;
-    margin-top: 20px;
-    font-size: 20px;
-}
 
-ul li a{
-    text-decoration: none;
-    color: white;
-    font-family: Arial, serif;
-    font-weight: bold;
-    transition: 0.4s ease-in-out;
-}
+
+
+
+
+
+/*.navbar{*/
+/*    background-color: #222529; !* Темний колір з прозорістю *!*/
+/*    padding: 10px 20px; !* Параметри відступу *!*/
+/*    position: fixed; !* Фіксована позиція *!*/
+/*    top: 0; !* Розташування зверху *!*/
+/*    left: 0; !* Розташування зліва *!*/
+/*    width: 100%; !* Ширина весь екран *!*/
+/*    z-index: 1000; !* Індекс зверху *!*/
+/*    opacity: 0.9; !* Прозорість *!*/
+/*}*/
+
+/*.icon{*/
+/*    width: 200px;*/
+/*    float: left;*/
+/*    height: 70px;*/
+/*}*/
+
+/*.logo{*/
+/*    color: white;*/
+/*    font-size: 40px;*/
+/*    font-family: Arial, serif;*/
+/*    padding-left: 20px;*/
+/*    float: left;*/
+/*    padding-top: 10px;*/
+/*}*/
+
+/*.menu{*/
+/*    width: 400px;*/
+/*    float: left;*/
+/*    height: 70px;*/
+/*}*/
+
+/*ul{*/
+/*    float: left;*/
+/*    display: flex;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*}*/
+
+/*ul li{*/
+/*    list-style: none;*/
+/*    margin-left: 62px;*/
+/*    margin-top: 20px;*/
+/*    font-size: 20px;*/
+/*}*/
+
+/*ul li a{*/
+/*    text-decoration: none;*/
+/*    color: white;*/
+/*    font-family: Arial, serif;*/
+/*    font-weight: bold;*/
+/*    transition: 0.4s ease-in-out;*/
+/*}*/
+
+/*ul li a:hover{*/
+/*    color: aqua;*/
+/*}*/
+
+/*.search{*/
+/*    width: 330px;*/
+/*    float: left;*/
+/*    margin-left: 270px;*/
+/*}*/
+
+/*.srch{*/
+/*    font-family: 'Times New Roman';*/
+/*    width: 200px;*/
+/*    height: 40px;*/
+/*    background: transparent;*/
+/*    border: 2px solid white;*/
+/*}*/
