--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,12 @@
     font-weight: normal;
     font-style: normal;
 }
+@font-face {
+    font-family: 'Omnes Pro';
+    src: url('font/omnes_bold.ttf') format('truetype'); /* Підставте шлях до вашого файлу шрифту жирного стилю */
+    font-weight: bold;
+    font-style: normal;
+}
 
 * {
     margin: 0;
@@ -12,16 +18,20 @@
 
 body {
     height: 2000px;
+    background-color: #f0f0f0;
 }
 
 .main {
     width: 100%;
     height: 109vh;
     font-family: "Omnes Pro", sans-serif;
+    line-height: 1.8;
+
 }
 
+
 .top_parallax {
-    background-image: url("img/back_image_2.jpg");
+    background-image: url("img/back_image_3.png");
     min-height: 56%;
     background-attachment: fixed;
     background-position: 80% center;
@@ -61,14 +71,17 @@ body {
 }
 
 .navigation_bar p:hover {
-    color: #ff6600;
+    color: #37558D;
 }
 
 .content {
     padding-top: 50px;
     font-family: "Omnes Pro", serif;
     margin: 30px;
+    background-color: #f0f0f0;
 }
+
+
 
 .content h1 {
     text-align: center;
@@ -88,6 +101,19 @@ body {
 @keyframes fadeIn {
     0% {opacity: 0;}
     100% {opacity: 1;}
+}
+
+.fade-in {
+    animation: fadeIn 0.5s ease;
+}
+
+@keyframes fade-in_v2 {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
 }
 
 .about {
@@ -126,22 +152,23 @@ body {
 .content h1{
     font-family: "Omnes Pro", serif;
     padding-left: 2px;
-    font-size: xx-large;
+    font-size: 4.2vw;
     color: #101926;
 }
 
 .content p{
     font-family: "Omnes Pro", serif;
     padding-left: 20px;
-    font-size: 2vw;
+    font-size: 1.7vw;
     color: #475467;
 }
 
 .about_2{
-    background-color: #42E9E3;
+    /*background-color: #42E9E3;*/
     height: fit-content;
     margin-top: 50px;
     display: flex;
+    margin-left: 0;
 }
 
 .void {
@@ -151,22 +178,122 @@ body {
 .text {
     padding: 50px;
     width: 95%;
+    text-align: center;
+}
+
+.just_text{
+    margin-top: 60px;
+    text-align: center;
 }
 
 .about_2 .text {
-    text-align: center;
     flex: 1;
 }
 
-.text p{
-    color: white;
-}
+
 
 .news {
     display: flex;
     /*position: relative;*/
     /*display: inline-block;*/
 }
+
+
+.menu-toggle {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    z-index: 9999;
+}
+
+.bar {
+    width: 40px;
+    height: 4px;
+    background-color: #333;
+    margin-bottom: 6px;
+    transition: all 0.3s ease;
+    z-index: 3;
+}
+
+.menu-toggle.open .bar:nth-child(1) {
+    transform: rotate(-45deg) translate(-4px, 4px);
+}
+
+.menu-toggle.open .bar:nth-child(2) {
+    opacity: 1;
+    transform: rotate(45deg) translate(-4px, -4px);
+}
+
+.menuTest {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(191, 191, 191, 0.87);
+    visibility: hidden;
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+    display: flex;
+    flex-direction: column; /* текст буде йти в стопчик */
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
+.menuTest.active {
+    visibility: visible;
+    opacity: 1;
+}
+
+.menuTest p {
+    color: #111A26;
+    font-size: 30px;
+    margin: 1em;
+    cursor: pointer;
+    transition: color 0.4s ease; /* плавний перехід зміни кольору */
+
+}
+
+.menuTest p:hover {
+    color: #37558D; /* новий колір при наведенні */
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(240, 240, 240, 0.89);
+    display: none;
+    justify-content: center;
+    align-items: center;
+    z-index: 2;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+}
+
+.overlay.open {
+    display: flex;
+    opacity: 1;
+}
+
+.menu {
+    padding: 20px;
+    border-radius: 5px;
+}
+
+.menu a {
+    display: block;
+    margin-bottom: 10px;
+    color: #333;
+    text-decoration: none;
+}
+
+
+
 
 /*.news_img {*/
 /*    margin-left: 50px;*/
@@ -194,7 +321,7 @@ body {
 
 .gallery {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-gap: 20px;
     margin: 30px;
 }
@@ -212,8 +339,7 @@ body {
 }
 
 .gallery img {
-    max-width: 100%;
-    height: auto;
+    width: 300px;
     border-radius: 10px;
 }
 
@@ -241,9 +367,9 @@ body {
 @media (max-width: 600px) {
     .top_parallax {
         background-size: cover;
-        min-height: 45%;
+        min-height: 40%;
         background-attachment: scroll;
-        background-image: url("img/tennis_ball_v2.png");
+        background-image: url("img/back_image_3_v3.png");
     }
 
     .top_bar h1{
@@ -282,6 +408,7 @@ body {
 
     .content h1 {
         text-align: center;
+        font-size: 9vw;
     }
 
     .content p {
@@ -311,4 +438,17 @@ body {
         margin-left: auto;
         margin-right: auto;
     }
+
+    .gallery {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+        grid-gap: 20px;
+        margin: 30px;
+    }
+
+    .gallery img {
+        max-width: 100%;
+        border-radius: 10px;
+    }
+
 }
